# lumifie-ai-agents

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci-competitive-intel-agent.yml  ci-contract-intelligence-agent.yml  ci-crm-automation-agent.yml  ci-inbound-triage-agent.yml  ci-lead-research-agent.yml  ci-lumifie-core.yml  ci-rag-knowledge-chatbot.yml  ci-regulatory-monitor-agent.yml  ci-sales-ops-multi-agent.yml  ci.yml
competitive-intel-agent/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
competitive-intel-agent/config/: default.toml
competitive-intel-agent/examples/: northwind-analytics_product-analytics-saas.brief.json  northwind-analytics_product-analytics-saas.brief.md
competitive-intel-agent/scripts/: generate_example_output.py  run_scheduled.sh
competitive-intel-agent/src/competitive_intel/: __init__.py  __main__.py  agent.py  cli.py  config.py  diff.py  models.py  report.py  search.py  store.py  tools.py
competitive-intel-agent/tests/: conftest.py  test_agent.py  test_report_and_models.py  test_store_and_diff.py
contract-intelligence-agent/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
contract-intelligence-agent/config/: default.toml
contract-intelligence-agent/examples/: sample_contract.report.json  sample_contract.report.md
contract-intelligence-agent/scripts/: generate_example_output.py  make_sample_pdf.py
contract-intelligence-agent/src/contract_intelligence/: __init__.py  __main__.py  agent.py  cli.py  config.py  llm_client.py  logging_config.py  models.py  pdf_loader.py  report.py  tools.py
contract-intelligence-agent/tests/: conftest.py  test_agent.py  test_models.py  test_pdf_loader.py  test_report.py  test_tools.py
crm-automation-agent/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
crm-automation-agent/config/: rules.example.yaml
crm-automation-agent/examples/: example_run.json  example_run.md
crm-automation-agent/scripts/: generate_example_output.py  run_scheduled.sh
crm-automation-agent/src/crm_automation/: __init__.py  __main__.py  actions.py  agent.py  approval.py  audit.py  cli.py  config.py  factory.py  models.py  report.py  rules.py  stub.py  triggers.py
crm-automation-agent/src/crm_automation/crm/: __init__.py  airtable.py  base.py  fake.py  hubspot.py
crm-automation-agent/tests/: conftest.py  test_agent_and_approval.py  test_clients_audit_report.py  test_triggers_and_rules.py
inbound-triage-agent/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
inbound-triage-agent/config/: default.toml
inbound-triage-agent/data/: mock_email.json  rebuttals.json
inbound-triage-agent/examples/: example_triage.json  example_triage.md
inbound-triage-agent/scripts/: generate_example_output.py
inbound-triage-agent/src/inbound_triage/: __init__.py  __main__.py  agent.py  api.py  cli.py  config.py  contacts.py  factory.py  knowledge.py  models.py  stub.py
inbound-triage-agent/tests/: conftest.py  test_api.py  test_routing.py  test_units.py
lead-research-agent/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
lead-research-agent/config/: default.toml  icp.example.json
lead-research-agent/examples/: acme-analytics.lead.json  acme-analytics.lead.md
lead-research-agent/scripts/: generate_example_output.py
lead-research-agent/src/lead_research/: __init__.py  __main__.py  agent.py  backends.py  cli.py  config.py  graph.py  icp.py  models.py  report.py
lead-research-agent/tests/: conftest.py  test_agent_graph.py  test_icp_and_models.py
lumifie-core/: README.md  pyproject.toml
lumifie-core/src/lumifie_core/: __init__.py  agent.py  airtable.py  chat.py  config.py  logging.py  provider.py  research_filters.py  retry.py  tiered.py  web.py
lumifie-core/tests/: conftest.py  test_airtable.py  test_base_agent.py  test_config_and_chat.py  test_provider.py  test_research_filters.py  test_tiered.py  test_web.py
rag-knowledge-chatbot/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
rag-knowledge-chatbot/config/: default.toml
rag-knowledge-chatbot/data/: company_faq.md  remote_work_policy.md
rag-knowledge-chatbot/examples/: example_answer.json  example_answer.md
rag-knowledge-chatbot/scripts/: generate_example_output.py
rag-knowledge-chatbot/src/rag_chatbot/: __init__.py  __main__.py  api.py  chatbot.py  cli.py  config.py  embeddings.py  factory.py  loaders.py  models.py  store.py  stub.py  ui.py
rag-knowledge-chatbot/tests/: conftest.py  test_api.py  test_chatbot.py  test_cli.py  test_embeddings.py  test_loaders.py  test_store.py
regulatory-monitor-agent/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
regulatory-monitor-agent/config/: profile.example.json
regulatory-monitor-agent/examples/: food-service_california-usa.digest.json  food-service_california-usa.digest.md
regulatory-monitor-agent/scripts/: generate_example_output.py  run_scheduled.sh
regulatory-monitor-agent/src/reg_monitor/: __init__.py  __main__.py  agent.py  cli.py  config.py  diff.py  loader.py  models.py  report.py  schemas.py  sources.py  store.py  utils.py
regulatory-monitor-agent/tests/: conftest.py  test_agent.py  test_report.py  test_store_and_diff.py
sales-ops-multi-agent/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
sales-ops-multi-agent/config/: sales_ops.example.yaml
sales-ops-multi-agent/examples/: demo-pipeline.pipeline.json  demo-pipeline.pipeline.md
sales-ops-multi-agent/scripts/: generate_example_output.py
sales-ops-multi-agent/src/sales_ops/: __init__.py  __main__.py  agent.py  approval.py  backends.py  cli.py  config.py  crm.py  demo.py  factory.py  models.py  report.py  state.py  store.py  stub.py  subagents.py  supervisor.py
sales-ops-multi-agent/tests/: conftest.py  test_pipeline.py  test_units.py
