[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "competitive-intel-agent"
version = "0.1.0"
description = "Autonomous competitive-intelligence agent: researches competitors, diffs run-over-run, and emits an executive brief."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Lumifie Consulting", email = "joejstan@gmail.com" }]
keywords = ["ai-agent", "competitive-intelligence", "web-search", "litellm", "claude"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business",
]

dependencies = [
    "lumifie-core",   # shared foundation (monorepo, see [tool.uv.sources])
    "pydantic>=2.6",
    "ddgs>=6.0",      # DuckDuckGo web search (no API key)
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[tool.uv.sources]
lumifie-core = { path = "../lumifie-core", editable = true }

[project.scripts]
competitive-intel = "competitive_intel.cli:main"

[project.urls]
Homepage = "https://github.com/jarvis2017/lumifie-ai-agents"
Repository = "https://github.com/jarvis2017/lumifie-ai-agents"

[tool.hatch.build.targets.wheel]
packages = ["src/competitive_intel"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"scripts/*" = ["E501"]
