[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contract-intelligence-agent"
version = "0.1.0"
description = "Production-grade AI agent that extracts, analyzes, and risk-rates contract clauses from PDFs."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Lumifie Consulting", email = "joejstan@gmail.com" }]
keywords = ["ai-agent", "contracts", "legal-tech", "anthropic", "claude", "tool-use"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Legal Industry",
    "Topic :: Office/Business",
]

dependencies = [
    "lumifie-core",   # shared provider/logging/retry/config/base-agent (monorepo, see [tool.uv.sources])
    "pydantic>=2.6",
    "pypdf>=4.2",
]

[tool.uv.sources]
lumifie-core = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "reportlab>=4.0",   # generate the sample contract PDF fixture
    "ruff>=0.5",
]

[project.scripts]
contract-intelligence = "contract_intelligence.cli:main"

[project.urls]
Homepage = "https://github.com/jarvis2017/lumifie-ai-agents"
Repository = "https://github.com/jarvis2017/lumifie-ai-agents"

[tool.hatch.build.targets.wheel]
packages = ["src/contract_intelligence"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# `str, Enum` is intentional (clear, widely compatible) — don't force StrEnum.
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
# Tests and scripts contain long inline data literals (contract text, findings).
"tests/*" = ["E501"]
"scripts/*" = ["E501"]
