[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crm-automation-agent"
version = "0.1.0"
description = "Human-gated CRM automation agent: monitors HubSpot/Airtable for trigger conditions and takes audited actions per a YAML rules file."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Lumifie Consulting", email = "joejstan@gmail.com" }]
keywords = ["ai-agent", "crm", "hubspot", "airtable", "automation", "litellm", "claude"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business",
]

dependencies = [
    "lumifie-core",   # shared foundation (monorepo, see [tool.uv.sources])
    "pydantic>=2.6",
    "pyyaml>=6.0",    # rules file
    "httpx>=0.27",    # HubSpot / Airtable REST clients
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[tool.uv.sources]
lumifie-core = { path = "../lumifie-core", editable = true }

[project.scripts]
crm-automation = "crm_automation.cli:main"

[project.urls]
Homepage = "https://github.com/jarvis2017/lumifie-ai-agents"
Repository = "https://github.com/jarvis2017/lumifie-ai-agents"

[tool.hatch.build.targets.wheel]
packages = ["src/crm_automation"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"scripts/*" = ["E501"]
