[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inbound-triage-agent"
version = "0.1.0"
description = "FastAPI pipeline that classifies inbound replies and routes them (RAG rebuttal / booking / contact extraction)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Lumifie Consulting", email = "joejstan@gmail.com" }]
keywords = ["ai-agent", "fastapi", "rag", "chroma", "sales", "litellm", "claude"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business",
]

dependencies = [
    "lumifie-core",       # shared foundation (monorepo, see [tool.uv.sources])
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn>=0.30",      # serve the webhook
    "chromadb>=0.5",      # RAG vector store for rebuttals
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5", "httpx>=0.27"]

[tool.uv.sources]
lumifie-core = { path = "../lumifie-core", editable = true }

[project.scripts]
inbound-triage = "inbound_triage.cli:main"

[project.urls]
Homepage = "https://github.com/jarvis2017/lumifie-ai-agents"
Repository = "https://github.com/jarvis2017/lumifie-ai-agents"

[tool.hatch.build.targets.wheel]
packages = ["src/inbound_triage"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"scripts/*" = ["E501"]
"main.py" = ["E402"]
