[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lead-research-agent"
version = "0.1.0"
description = "Multi-agent (LangGraph) lead research: enrich a target company, score against an ICP, and draft personalized outreach."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Lumifie Consulting", email = "joejstan@gmail.com" }]
keywords = ["ai-agent", "langgraph", "sales", "lead-research", "litellm", "claude"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business",
]

dependencies = [
    "lumifie-core",      # shared foundation (monorepo, see [tool.uv.sources])
    "pydantic>=2.6",
    "langgraph>=0.2",    # multi-agent orchestration
    "ddgs>=6.0",         # web search (no API key)
    "httpx>=0.27",       # Jina Reader fetch
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[tool.uv.sources]
lumifie-core = { path = "../lumifie-core", editable = true }

[project.scripts]
lead-research = "lead_research.cli:main"

[project.urls]
Homepage = "https://github.com/jarvis2017/lumifie-ai-agents"
Repository = "https://github.com/jarvis2017/lumifie-ai-agents"

[tool.hatch.build.targets.wheel]
packages = ["src/lead_research"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"scripts/*" = ["E501"]
