[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-knowledge-chatbot"
version = "0.1.0"
description = "Upload your documents and get a chatbot that answers questions with exact, inline source citations (RAG over Chroma)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Lumifie Consulting", email = "joejstan@gmail.com" }]
keywords = ["ai-agent", "rag", "chroma", "chatbot", "citations", "litellm", "claude"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business",
]

dependencies = [
    "lumifie-core",         # shared foundation (monorepo, see [tool.uv.sources])
    "pydantic>=2.6",
    "chromadb>=0.5",        # persistent vector store for incremental ingestion
    "pypdf>=4.2",           # PDF loader
    "python-docx>=1.1",     # Word .docx loader
    "beautifulsoup4>=4.12", # strip HTML from fetched URLs
    "httpx>=0.27",          # URL fetching
    "fastapi>=0.110",
    "uvicorn>=0.30",        # serve the chatbot API
]

[project.optional-dependencies]
# Production-grade semantic embeddings. Heavy (pulls torch) — kept OUT of [dev]
# so CI/tests never download it; tests use the offline hashing backend.
st = ["sentence-transformers>=3.0"]
# Optional browser UI. Install with: uv pip install -e ".[ui]"
ui = ["gradio>=4.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5", "httpx>=0.27"]

[tool.uv.sources]
lumifie-core = { path = "../lumifie-core", editable = true }

[project.scripts]
rag-chatbot = "rag_chatbot.cli:main"

[project.urls]
Homepage = "https://github.com/jarvis2017/lumifie-ai-agents"
Repository = "https://github.com/jarvis2017/lumifie-ai-agents"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_chatbot"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"scripts/*" = ["E501"]
"main.py" = ["E402"]
