[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sales-ops-multi-agent"
version = "0.1.0"
description = "LangGraph supervisor orchestrating the full B2B sales cycle (prospect → outreach → reply-handling → CRM sync → report) with a human approval gate."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Lumifie Consulting", email = "joejstan@gmail.com" }]
keywords = ["ai-agent", "langgraph", "multi-agent", "sales", "supervisor", "litellm", "claude"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business",
]

dependencies = [
    "lumifie-core",      # shared foundation (monorepo, see [tool.uv.sources])
    "pydantic>=2.6",
    "langgraph>=0.2",    # supervisor + checkpointing
    "pyyaml>=6.0",       # business config
    "ddgs>=6.0",         # prospecting web search
    "httpx>=0.27",       # reader + CRM REST + Telegram
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[tool.uv.sources]
lumifie-core = { workspace = true }

[project.scripts]
sales-ops = "sales_ops.cli:main"

[project.urls]
Homepage = "https://github.com/jarvis2017/lumifie-ai-agents"
Repository = "https://github.com/jarvis2017/lumifie-ai-agents"

[tool.hatch.build.targets.wheel]
packages = ["src/sales_ops"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"scripts/*" = ["E501"]
